<resources>

    <string name="tab_text_4">How Need</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="UserName">Email :</string>
    <string name="Password">Password :</string>
    <string name="Update">Update</string>
    <string name="sand">sand</string>
    <string name="send">send</string>
    <string name="name">اسم المحتاج</string>
    <string name="typeblood">نوع وحد الدم</string>
    <string name="plac">عنوان التبرع</string>
    <string name="date">المدينة_الحي</string>
    <string name="old">العمر</string>
    <string name="num">عدد وحدات الدم</string>

    <string name="now_notification_title_template">Now: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="now_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">Blood Bank</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="edt1">Email</string>
    <string name="edtpassword">password</string>
    <string name="loginbu">Login</string>
    <string name="loginface">Login with facebook</string>
    <string name="logingoogle">Login With Google</string>
    <string name="createbutton">Create Account</string>
    <string name="textview">or</string>
    <string name="labelcreateaccunt">Create Your Account</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="regster">Regster</string>
    <string-array name="selectcity">
        <item>Select City</item>
        <item>Amman</item>
        <item>Zarqa</item>
        <item>Irbid</item>
        <item>Aqaba</item>
        <item>Ajloun</item>
        <item>Karak</item>
        <item>Tafilah</item>
        <item>Maan</item>
        <item>Jerash</item>
        <item>Mafraq</item>
        <item>Madaba</item>
        <item>Balqaa</item>


    </string-array>

    <string-array name="selectbloodgroup">


        <item>Select Blood Gruop</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>


    </string-array>
</resources>
