<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/a1"
    tools:context="com.example.app.bloodbank.splash"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="371dp"
        android:layout_height="76dp"
        android:gravity="center"
        android:text="LOGIN"
        android:textColor="@android:color/darker_gray"
        android:textSize="55sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="36dp" />


    <Button
        android:id="@+id/pass"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:background="@drawable/buttonshape"
        android:onClick="Log"
        android:shadowColor="#A80C0C"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="LOGIN"
        android:textColor="#FF0000"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="274dp" />

    <Button
        android:id="@+id/angry_btn2"
        android:layout_width="180dp"
        android:layout_height="66dp"
        android:background="@drawable/buttonshape2"
        android:onClick="reggg"
        android:shadowColor="#A80C0C"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/register"
        android:textColor="#FF0000"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="349dp" />

    <EditText
        android:id="@+id/uName"
        android:layout_width="311dp"
        android:layout_height="57dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/UserName"
        android:inputType="textPersonName"

        android:textSize="24sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="120dp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="314dp"
        android:layout_height="65dp"
        android:ems="10"
        android:gravity="center"

        android:hint="@string/Password"
        android:inputType="textPersonName"

        android:textSize="24sp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="197dp" />


</android.support.constraint.ConstraintLayout>
